# ConsoleApp

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  RunExample.sh  premake5.lua
example/: CMakeLists.txt  Example.cpp  Makefile  main.cpp
include/: ConsoleApp.h  EntryPoint.h  Logger.h
src/: ConsoleApp.cpp  Core.cpp
